Bug 931335 - Handle mismatched texture target in framebufferTexture2D - r=jgilbert, a=bbajaj